<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">两只蚂蚁</string>
    <string name="empty_string">\u3000</string>
    <string name="user_nickname">两只蚂蚁</string>
    <string name="prompt_phone">蚂蚁号/手机号</string>
    <string name="prompt_account">帐号</string>
    <string name="prompt_password_label">密码</string>
    <string name="action_sign_in">登\t录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="prompt_password">请输入登录密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="register_account">还没有帐号？请注册</string>
    <string name="account_is_empty">请填写帐号</string>
    <string name="password_is_empty">请填写密码</string>
    <string name="account_and_password_error">帐号密码错误</string>
    <string name="account_error">帐号不存在</string>
    <string name="password_error">密码不正确</string>
    <string name="dialog_login_ing">登录中~</string>
    <string name="network_connected_fail">网络链接失败！</string>
    <string name="skip_navigation">跳过</string>
    <string name="enter_navigation">立即体验</string>
    <string name="enter_navigation_fail">非常抱歉，数据无法保存，即将退出。</string>
    <string name="menu_add">选项</string>
    <string name="menu_create_group">创建群聊</string>
    <string name="menu_add_friends">加好友</string>
    <string name="menu_add_group">加群</string>
    <string name="menu_setting">设置</string>
    <string name="search_nearby">附近</string>
    <string name="search_new_state">最新</string>
    <string name="search_hot">最热</string>
    <string name="search_bargain">交易量</string>
    <string name="search_browse">浏览量</string>
    <string name="search_comment">评论</string>
    <string name="search_contact">联系人</string>
    <string name="search_group">群组</string>
    <string name="search_history">聊天记录</string>
    <string name="commodity_main_page_toolbar_search_option">商品</string>
    <string name="activity_main_page_toolbar_search_option">活动</string>
    <string name="friend_main_page_toolbar_search_option">好友</string>
    <string name="search_hint_info">蚂蚁</string>
    <string name="main_page_search">搜索</string>
    <string name="main_page_info">信息</string>
    <string name="main_page_county">区域</string>
    <string name="hint_get_current_location">获取中…</string>
    <string name="hint_change_location">更换区域中…</string>
    <string name="main_page_merchant">附近店铺</string>
    <string name="main_page_commodity">附近商品</string>
    <string name="main_page_discover">发现惊喜</string>
    <string name="main_page_activity">附近活动</string>
    <string name="main_page_entered">店铺入驻</string>
    <string name="navigation_tab_chat">交流中心</string>
    <string name="navigation_tab_people_info">身边店铺</string>
    <string name="navigation_tab_payment">最新店铺</string>
    <string name="navigation_tab_center">我的中心</string>
    <string name="try_again_to_back">再按一次退出</string>
    <string name="loading_fail">加载失败</string>
    <string name="location">地址</string>
    <string name="select_location">请选择省市区</string>
    <string name="confirm_location">确\t\t认</string>
    <string name="logout_inform">下线通知</string>
    <string name="logout_inform_info">登录凭证已经过期，请重新登录。</string>
    <string name="history_list">历史记录</string>
    <string name="merchant_has_action">有活动</string>
    <string name="history_list_clean">清空记录</string>
    <string name="app_bar_behavior">net.twoant.master.ui.main.widget.AppBarBehavior</string>
    <string name="chat_get_user_info_fail">获取用户信息失败</string>
    <string name="chat_not_find_user_info">未找到该用户信息</string>
    <string name="chat_clean_history_successful">清除聊天记录成功</string>
    <string name="chat_clean_history_fail">清除聊天记录失败</string>
    <string name="chat_photo_parent_fail">创建图片文件失败</string>
    <string name="chat_popup_window_relay">转发</string>
    <string name="chat_popup_window_copy">复制</string>
    <string name="chat_popup_window_delete">删除</string>
    <string name="chat_copy_successful">复制成功</string>
    <string name="chat_copy_fail">复制失败</string>
    <string name="chat_group_invite" formatted="false">%s (%s)</string>
    <string name="chat_user_data_error">用户数据获取失败！</string>
    <string name="my_order">我的订单</string>
    <string name="send_center">配送中心</string>
    <string name="shop_manager">店铺管理</string>
    <string name="chat_not_login">交流中心未成功登录，请尝试重新登录。</string>
    <string name="chat_create_group">创建群聊</string>
    <string name="chat_to_login">登录</string>
    <string name="chat_cancel_login">取消</string>
    <string name="category_dynamic">动态</string>
    <string name="category_new_friend">新朋友</string>
    <string name="category_new_group">群聊</string>
    <string name="category_new_addition">加群</string>
    <string name="category_nearby">附近</string>
    <string name="category_action">活动</string>
    <string name="info_nickname">昵称</string>
    <string name="info_uid">蚂蚁号</string>
    <string name="info_sex">性别</string>
    <string name="info_apply_group">申请加群</string>
    <string name="info_age">年龄</string>
    <string name="info_group_member">群成员</string>
    <string name="info_person">个人信息</string>
    <string name="info_header">头像</string>
    <string name="info_signature">个性签名</string>
    <string name="info_send_mess">发消息</string>
    <string name="info_add_friend">添加好友</string>
    <string name="info_modify">修改</string>
    <string name="info_find_friend">蚂蚁号/手机号</string>
    <string name="info_find_group">群号</string>
    <string name="info_verify">填写验证信息</string>
    <string name="info_search_group">请输入群号进行搜索</string>
    <string name="info_search_group_title">群搜索</string>
    <string name="info_signature_hint">这个人很懒，什么也没留下。</string>
    <string name="info_account_nonentity">账号不存在</string>
    <string name="info_account_find">搜索中…</string>
    <string name="info_friendly_hint">交个朋友吧</string>
    <string name="info_black_hint">前往黑名单</string>
    <string name="action_detail">活动</string>
    <string name="action_transition_img">action</string>
    <string name="action_merchant_name">活动店铺:</string>
    <string name="action_release_time">发布时间:</string>
    <string name="action_address">活动地址:</string>
    <string name="action_continue_time">活动时间:</string>
    <string name="action_apply_count">报名人数:</string>
    <string name="action_cost">活动费用:</string>
    <string name="action_detail_describe">活动详情</string>
    <string name="action_applied">已报名(%d)</string>
    <string name="action_share">分享</string>
    <string name="action_activity_item">费用项目</string>
    <string name="action_next">下一步</string>
    <string name="action_integral">%s 积分</string>
    <string name="action_price">￥%s</string>
    <string name="action_info">请填写报名信息</string>
    <string name="action_info_name">姓名</string>
    <string name="action_info_phone">手机号</string>
    <string name="action_info_apply">报名</string>
    <string name="action_loading_more_apply">查看更多报名</string>
    <string name="action_integral_dialog_balance_not_enough">积分不足</string>
    <string name="action_integral_dialog_balance">积分余额:</string>
    <string name="action_integral_dialog_lack">需支付:</string>
    <string name="action_integral_dialog_know">知道了</string>
    <string name="action_integral_dialog_recharge">去充值</string>
    <string name="action_integral_dialog_integral">积分</string>
    <string name="action_examine_statement">查看财务报表</string>
    <string name="action_integral_hint">所需积分</string>
    <string name="action_wallet_hint">请输入金额</string>
    <string name="action_wallet">金额</string>
    <string name="action_verification_fail">校验数据失败\n请尝试重新输入\"积分\"或\"钱包\"金额。</string>
    <string name="action_inner_input_zero">输入的金额等于或小于\"0\"元</string>
    <string name="action_password_fail">验证密码失败</string>
    <string name="action_limit" formatted="false">已报名: %s/%s</string>
    <string name="action_get_red_packet_fail">领取红包失败!</string>
    <string name="title_location">位置</string>
    <string name="search_place">搜索地点</string>
    <string name="search_text">搜索</string>
    <string name="update_title">发现新版本</string>
    <string name="update_update">立即更新</string>
    <string name="update_next">下次提醒</string>
    <string name="update_schedule" formatted="false">蚂蚁已经下载 %d %%</string>
    <string name="action_pay_title">活动订单</string>
    <string name="action_pay_receiver">收款方:</string>
    <string name="action_pay_price">支付金额:</string>
    <string name="action_pay_need">还需支付:</string>
    <string name="action_pay_red_packet">可用红包</string>
    <string name="action_pay_used">可用</string>
    <string name="integral_of_money">所需积分:</string>
    <string name="action_pay_wallet">钱包支付</string>
    <string name="action_pay_affirm">确认支付</string>
    <string name="action_pay_deductions">抵扣￥</string>
    <string name="goods_car">购物车</string>
    <string name="goods_car_clean">清空</string>
    <string name="goods_click_count">点击量:%d</string>
    <string name="goods_price">价格:￥%s</string>
    <string name="share_goods">商品分享</string>
    <string name="goods_merchant">店铺:%s</string>
    <string name="goods_query_collection_fail">查询收藏状态失败</string>
    <string name="goods_collection_successful">收藏成功</string>
    <string name="goods_collection_cancel">取消收藏</string>
    <string name="goods_apply_order_fail">订单提交失败,请尝试重新进入该界面。</string>
    <string name="goods_data_exception">数据异常，即将退出。</string>
    <string name="goods_is_empty">未选中商品</string>
    <string name="goods_count_hint">共%d件商品</string>
    <string name="goods_confirm">确认</string>
    <string name="goods_clean_cart">确认清空吗？</string>
    <string name="goods_price_sum">合计￥:%s</string>
    <string name="recharge_combined_limit">最低充值金额:%d元</string>
    <string name="recharge_error_empty_hint">请输入充值金额!</string>
    <string name="recharge_error_format_hint">请输入正确的充值金额!</string>
    <string name="recharge_title_integral">积分充值</string>
    <string name="recharge_integral_hint">积分充值:%s</string>
    <string name="recharge_wallet_hint">钱包充值:%s</string>
    <string name="recharge_title_wallet">钱包充值</string>
    <string name="recharge_title_combined">联合运营充值</string>
    <string name="recharge_hint">充值金额:</string>
    <string name="recharge_input_hint">请输入充值金额</string>
    <string name="recharge_btn_apply">充\t\t值</string>
    <string name="recharge_result_hint">充值金额:%s元</string>
    <string name="recharge_integral_result_hint">充值积分:%s</string>
    <string name="recharge_wallet_balance">钱包余额\n%s元</string>
    <string name="recharge_wallet_balance_deficiency">钱包余额不足!</string>
    <string name="payment_favour">折后金额:%s</string>
    <string name="payment_current_prize">当前优惠:%s折</string>
    <string name="payment_marquee_vip_info" formatted="false">您是“%s”的店铺会员,当前会员级别为:%s,享有%s折优惠。</string>
    <string name="payment_prize_page">抽奖</string>
    <string name="payment_stored_sum">储值金额:%s元</string>
    <string name="payment_stored_hint">选中储值金额:%s元</string>
    <string name="payment_stored_balance">余额:%s元</string>
    <string name="payment_get_red_packet_limit_fail">获取限制失败</string>
    <string name="merchant_key_word_setting">关键词设定</string>
    <string name="merchant_key_word_first">关键词1:</string>
    <string name="merchant_key_word_second">关键词2:</string>
    <string name="merchant_key_word_third">关键词3:</string>
    <string name="merchant_key_word_request">关键词最多八个字</string>
    <string name="merchant_key_word_confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="notify">新消息提醒</string>
    <string name="newnotify">接收新消息通知</string>
    <string name="voice">声音</string>
    <string name="shake">震动</string>
    <string name="chatset">聊天设置</string>
    <string name="yangshengqi">使用扬声器播放语音</string>
    <string name="book_black">通讯录黑名单</string>
    <string name="search">搜索</string>
    <string name="blacklist">黑名单列表</string>
    <string name="serach_group_message">消息搜索</string>
    <string name="Empty_the_chat_record">清空聊天记录</string>
    <string name="Change_the_group_name">改变群名称</string>
    <string name="delete_msg_when_exit_group">退出群组时删除聊天数据</string>
    <string name="auto_accept_group_invitation">自动同意群组加群邀请</string>
</resources>