<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/create_group"
        android:orderInCategory="1"
        android:title="@string/menu_create_group"
        app:showAsAction="never" />

    <item
        android:id="@+id/add_friends"
        android:orderInCategory="2"
        android:title="@string/menu_add_friends"
        app:showAsAction="never" />

    <item
        android:id="@+id/add_group"
        android:orderInCategory="3"
        android:title="@string/menu_add_group"
        app:showAsAction="never" />

    <item
        android:id="@+id/setting"
        android:orderInCategory="4"
        android:title="@string/menu_setting"
        app:showAsAction="never" />


</menu>