<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.ContentFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ll_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/px_20"
            android:text="@string/info_search_group_title"
            android:textColor="@color/subordinationTitleTextColor"
            android:textSize="@dimen/px_text_28" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:hint="@string/info_search_group"
            android:imeOptions="actionSearch"
            android:imeActionId="@+id/search"
            android:imeActionLabel="@string/main_page_search"
            android:inputType="number"
            android:lines="1"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingLeft="@dimen/px_20"
            android:paddingRight="@dimen/px_20"
            android:textColor="@color/principalTitleTextColor"
            android:textColorHint="@color/subordinationContentTextColor"
            android:textSize="@dimen/px_text_28" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/px_2"
                android:layout_marginRight="@dimen/px_2"
                android:layout_weight="1"
                android:background="@drawable/yh_btn_press_grey"
                android:text="@string/cancel"
                android:textColor="@color/whiteTextColor"
                android:textSize="@dimen/px_text_28" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/px_2"
                android:layout_marginStart="@dimen/px_2"
                android:layout_weight="1"
                android:background="@drawable/yh_btn_press_orange"
                android:text="@string/search"
                android:textColor="@color/whiteTextColor"
                android:textSize="@dimen/px_text_28" />

        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/pb_progressBar"
        style="?android:attr/progressBarStyleSmall"
        android:padding="@dimen/px_80"
        android:visibility="gone"
        android:background="#30000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</android.support.v7.widget.ContentFrameLayout>