<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.v7.widget.LinearLayoutCompat xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/iv_header_image"
            android:layout_width="@dimen/px_126"
            android:layout_height="@dimen/px_126"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/px_120"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/user_nickname"
            android:textColor="@color/navigationTextColor"
            android:textSize="@dimen/px_text_34"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterOverflowTextAppearance="@style/TextInputLayoutCounterOverflow"
            app:counterTextAppearance="@style/TextInputLayoutCounter"
            app:errorTextAppearance="@style/TextInputLayoutError"
            app:hintTextAppearance="@style/TextInputLayoutHint">

            <AutoCompleteTextView
                android:id="@+id/atv_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_phone"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:lines="1"
                android:maxLength="11"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:counterOverflowTextAppearance="@style/TextInputLayoutCounterOverflow"
            app:counterTextAppearance="@style/TextInputLayoutCounter"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/TextInputLayoutError"
            app:hintTextAppearance="@style/TextInputLayoutHint"
            app:passwordToggleEnabled="true">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_password"
                style="@style/EditText"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/et_login"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="16"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_sign_in"
            style="@style/LargeBtnPress"
            android:layout_marginTop="16dp"
            android:background="@drawable/yh_btn_press_orange"
            android:text="@string/action_sign_in" />


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/px_30"
            android:clickable="true"
            android:text="@string/forget_password"
            android:textColor="@color/subordinationContentTextColor"
            android:textSize="@dimen/px_text_20" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/yh_btn_press_orange_border"
            android:clickable="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/register_account"
            android:textColor="@color/currentSelectColor" />
    </android.support.v7.widget.LinearLayoutCompat>
</ScrollView>

